# conversation

./: .env.sample  .example.env  .gitignore  CLAUDE.md  README.md  conversation_graph.py  conversation_manager.py  examples.py  export_tools.py  install.sh  llm.py  main.py  models.py  pyproject.toml  requirements.txt  setup.py  setup.sh  setup_uv.sh  switch_llm.py  test_fix.py  test_llm.py  test_memory.py  test_ollama_chat.py  test_simplified.py
conversation/: __init__.py  load_env.py
conversation/core/: __init__.py  graph.py  manager.py  modules.py  providers.py
conversation/llm/: __init__.py  base.py  mock.py  ollama.py  openai.py
conversation/utils/: __init__.py  export_tools.py  id_utils.py  image_utils.py  logging.py
examples/: concurrent_test.py  examples.py  langchain_test_optimized.py  logging_example.py  main.py  quick_test.py  structured_output_test.py  test.ipynb  test.py  test_api.ipynb
tests/: test_fix.py  test_llm.py  test_memory.py  test_ollama_chat.py  test_ollama_image.py  test_simplified.py
