[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation"
version = "0.1.0"
description = "多模态对话系统"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0", 
    "openai>=1.0.0",
    "pillow>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["conversation*"]

[project.urls]
Homepage = "https://github.com/yourusername/conversation"
Repository = "https://github.com/yourusername/conversation.git"
