[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation"
version = "0.1.0"
description = "LLM conversation manager."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Sicheng Hua", email = "sc_hua@qq.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0", 
    "openai>=1.0.0",
    "pillow>=9.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["conversation*"]

[project.urls]
Homepage = "https://github.com/sc-hua/conversation"
Repository = "https://github.com/sc-hua/conversation.git"
git add .git add .